# lives

./: .gitignore  introducao.py  pyproject.toml  teste.txt
live1/: decorators.py  introducao.py  requirements.txt
live2/: duvidas_live_1.py  main.py  parallel.py  requisicoes.py
live3/: brute_force_zip.py  desafio_chaos.py  main.py
live4/: Dockerfile  desafio_chaos.py  docker_commands.md  echo_telegram_bot.py  pyproject.toml  telegram_bot.py  timer_bot_telegram.py  utils.py
